feat: otel e2e trace

--- a/dir.yaml
+++ b/dir.yaml
@@ -568,6 +568,9 @@
             - title_en: Traces
               title_cn: 追踪
               path: observability/open-telemetry/traces
+            - title_en: E2E Traces
+              title_cn: 端到端追踪
+              path: observability/open-telemetry/e2e-traces
     - title_en: Backup and Restore
       title_cn: 备份与恢复
       path: operations/backup-restore
